fix spacing issues on project

--- a/css/styles.css
+++ b/css/styles.css
@@ -126,7 +126,7 @@ p {
 .button2 {
   position:relative;
   left: 900px;
-  top: -90px;
+  top: -91px;
 }
 span {
   font-weight: bold;
